ipad spacing issues

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -62,9 +62,8 @@
     list-style: none
     color: #000
     margin: 0
-    padding-bottom: 25px
+    padding: 0 0 0 25px
     line-height: 1.7
-    padding-bottom: 15px
     cursor: pointer
 
     li
